@@ -14,6 +14,8 @@ CBreakpointManager.2=Set breakpoint failed. Reason: {0}.
 CBreakpointManager.4=Change breakpoint properties failed. Reason: {0}.
 CGlobalVariableManager.0=Invalid global variables data.
 CMemoryBlockExtensionRetrieval.0=Expression ''{0}'' evaluated to invalid address value: {1}.
+CMemoryBlockExtensionRetrieval.1=Invalid expression type: ''{0}''
+CMemoryBlockExtensionRetrieval.2=Invalid expression: ''{0}''
 DebugConfiguration.0=This debugger no longer supports this operation
 CDebugAdapter.0=This debugger does not support debugging external files
 CDebugAdapter.1=Debugger Process
